--- a/index.html
+++ b/index.html
@@ -145,23 +145,6 @@
     .kpi .label{ color:#444; }
     .kpi .val{ font-weight:700; }
 
-    /* ÚJ: mai hiány jelzés */
-    .notice{
-      margin-top: 10px;
-      background: #fff7e6;
-      border: 1px solid rgba(0,0,0,0.08);
-      border-left: 4px solid #ff9800;
-      border-radius: 10px;
-      padding: 8px 10px;
-      font-size: 12px;
-      color:#333;
-    }
-    .notice.ok{
-      background:#eef9f0;
-      border-left-color:#1b8f3a;
-    }
-    .notice .small{ color:#555; margin-top:4px; font-size: 12px; }
-
     #panelLeft{ top: 12px; left: 12px; }
     #panelRight{ top: 12px; right: 12px; }
 
@@ -202,7 +185,6 @@
     .swatch{ width:12px; height:12px; border-radius:3px; border:1px solid rgba(0,0,0,0.2); }
     #legend.collapsed .legendBody{ display:none; }
 
-    /* ÚJ: mapStamp zárható + kevésbé zavar mobilon */
     .mapStamp{
       position:absolute;
       z-index:1200;
@@ -214,27 +196,8 @@
       padding: 8px 10px;
       font: 12px/1.3 system-ui, -apple-system, Segoe UI, Roboto, Arial;
       box-shadow: 0 6px 18px rgba(0,0,0,0.12);
-      max-width: 320px;
+      max-width: 300px;
     }
-    .mapStamp .topline{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:10px;
-      margin-bottom: 6px;
-    }
-    .mapStamp .close{
-      border:0;
-      background:#111;
-      color:#fff;
-      border-radius: 8px;
-      padding: 4px 7px;
-      cursor:pointer;
-      font-size: 12px;
-      line-height:1;
-    }
-    .mapStamp.collapsed .content{ display:none; }
-    .mapStamp.collapsed{ max-width: 220px; padding: 8px 10px; }
 
     @media (max-width: 820px){
       #panelLeft, #panelRight{
@@ -253,15 +216,12 @@
         bottom: 10px !important;
         max-width: none !important;
       }
-
-      /* mobil: mapStamp ne takarjon — feljebb tesszük és kisebb */
       .mapStamp{
         left: 10px !important;
         right: 10px !important;
         bottom: 86px !important;
         max-width: none !important;
       }
-
       .panel .toggleBtn{ padding: 8px 12px; }
       .chip{ padding: 8px 10px; }
       .btn{ padding: 10px 12px; font-size: 13px; }
@@ -271,15 +231,7 @@
 
 <body>
   <div id="map"></div>
-
-  <!-- ÚJ: zárható mapStamp -->
-  <div id="mapStamp" class="mapStamp">
-    <div class="topline">
-      <b>Adat dátuma</b>
-      <button id="btnStamp" class="close" type="button" title="Összecsukás">✕</button>
-    </div>
-    <div class="content">Adatok: betöltés…</div>
-  </div>
+  <div id="mapStamp" class="mapStamp">Adatok: betöltés…</div>
 
   <!-- LEFT PANEL -->
   <div id="panelLeft" class="panel">
@@ -301,19 +253,17 @@
         <label class="chip"><input id="chkLog" type="checkbox" checked> Napló</label>
       </div>
 
-      <!-- ÚJ: drón idősáv -->
       <div class="row">
-        <span class="chip">Drón idősáv:
-          <select id="selDroneWindow">
-            <option value="latest" selected>Legfrissebb</option>
-            <option value="7d">Elmúlt 7 nap</option>
-            <option value="30d">Elmúlt 30 nap</option>
+        <span class="chip">Drón forrás:
+          <select id="selDroneSource">
+            <option value="gdelt_latest" selected>GDELT (latest)</option>
+            <option value="isw_latest">ISW UAV (latest)</option>
+            <option value="isw_7d">ISW UAV (7 nap)</option>
+            <option value="isw_30d">ISW UAV (30 nap)</option>
           </select>
         </span>
+        <button id="btnReloadDrones" class="btn secondary" type="button">Drón újratöltés</button>
       </div>
-
-      <!-- ÚJ: mai hiány jelzés -->
-      <div id="todayNotice" class="notice" style="display:none;"></div>
 
       <div class="row">
         <span class="chip">Alaptérkép:
@@ -441,7 +391,7 @@
       <div class="item"><span class="swatch" style="background:#6b0000;"></span>DeepState megszállt terület (kitöltés)</div>
       <div class="item"><span class="swatch" style="background:#d00;"></span>DeepState határ/frontvonal</div>
       <div class="item"><span class="swatch" style="background:#ff5500;"></span>FIRMS hőpont</div>
-      <div class="item"><span class="swatch" style="background:#0077ff;"></span>Drón pont (OSINT híralapú)</div>
+      <div class="item"><span class="swatch" style="background:#0077ff;"></span>Drón pont (OSINT híralapú / ISW kivonat)</div>
       <div class="item"><span class="swatch" style="background:#00a000;"></span>ArcGIS frontvonal</div>
       <div class="item"><span class="swatch" style="background:#7a00ff;"></span>ArcGIS orosz előretörés (polygon)</div>
       <div class="item"><span class="swatch" style="background:rgba(255,255,255,0); border:1px dashed rgba(0,0,0,0.35);"></span>GIBS: hőtérkép overlay</div>
@@ -450,7 +400,7 @@
 
 <script>
 (() => {
-  // ====== FIRMS MAP_KEY (idézőjelek maradnak!) ======
+  // ====== FIRMS MAP_KEY ======
   const FIRMS_MAP_KEY = "44b266fd8324db5a0a9866017429dc43";
 
   // ====== ArcGIS rétegek ======
@@ -470,6 +420,14 @@
   const UKRAINE_BBOX = "22,44,40,53";
   const UKRAINE_BOUNDS_RAW = { sw: [44.0, 22.0], ne: [52.7, 40.2] };
 
+  // ====== Drone sources (local files) ======
+  const DRONE_SOURCES = {
+    gdelt_latest: { label: "GDELT (latest)", url: "./data/drones_latest.geojson" },
+    isw_latest:   { label: "ISW UAV (latest)", url: "./data/isw_uav_latest.geojson" },
+    isw_7d:       { label: "ISW UAV (7 nap)",  url: "./data/isw_uav_7d.geojson" },
+    isw_30d:      { label: "ISW UAV (30 nap)", url: "./data/isw_uav_30d.geojson" },
+  };
+
   const el = (id) => document.getElementById(id);
 
   const panelLeft = el("panelLeft");
@@ -485,7 +443,8 @@
   const chkArcAdv = el("chkArcAdv");
   const chkLog = el("chkLog");
 
-  const selDroneWindow = el("selDroneWindow"); // ÚJ
+  const selDroneSource = el("selDroneSource");
+  const btnReloadDrones = el("btnReloadDrones");
 
   const selBase = el("selBase");
   const selZoom = el("selZoom");
@@ -503,9 +462,6 @@
 
   const logEl = el("log");
   const mapStamp = el("mapStamp");
-  const btnStamp = el("btnStamp");
-
-  const todayNotice = el("todayNotice"); // ÚJ
 
   const lblDate = el("lblDate");
   const lblFile = el("lblFile");
@@ -537,7 +493,6 @@
   function isMobile(){
     return window.matchMedia && window.matchMedia("(max-width: 820px)").matches;
   }
-
   function collapseForMobile(){
     if(isMobile()){
       panelLeft.classList.add("collapsed");
@@ -564,12 +519,6 @@
 
   chkLog.addEventListener("change", () => setLogVisible(chkLog.checked));
   setLogVisible(true);
-
-  // ÚJ: mapStamp csukás
-  btnStamp.addEventListener("click", () => {
-    mapStamp.classList.toggle("collapsed");
-    btnStamp.textContent = mapStamp.classList.contains("collapsed") ? "☰" : "✕";
-  });
 
   if(!window.L){
     alert("Leaflet nem töltött be.");
@@ -689,7 +638,6 @@
   // ---------- Map stamp (DeepState + ArcGIS meta) ----------
   let arcFrontInfo = { label: ARCGIS_FRONT_LABEL_FALLBACK, edited: null };
   let arcAdvInfo = { label: ARCGIS_ADV_LABEL_FALLBACK, edited: null };
-  let deepLatestDate = null;
 
   function fmtDateTime(ts){
     if(!ts || !Number.isFinite(ts)) return null;
@@ -697,34 +645,11 @@
     return d.toISOString().slice(0,16).replace("T"," ");
   }
 
-  function setTodayNotice(){
-    if(!deepLatestDate) { todayNotice.style.display="none"; return; }
-    const today = new Date().toISOString().slice(0,10);
-    todayNotice.style.display = "";
-    if(deepLatestDate !== today){
-      todayNotice.classList.remove("ok");
-      todayNotice.innerHTML = `<b>⚠ Nincs mai DeepState</b><div class="small">Legfrissebb: <b>${deepLatestDate}</b> (mai: ${today})</div>`;
-    }else{
-      todayNotice.classList.add("ok");
-      todayNotice.innerHTML = `<b>✅ Mai DeepState elérhető</b><div class="small">${deepLatestDate}</div>`;
-    }
-  }
-
   function updateStamp(){
     const deep = currentDate || "–";
-    const deepLatest = deepLatestDate || "–";
     const front = arcFrontInfo.edited ? `${arcFrontInfo.label} (edit: ${fmtDateTime(arcFrontInfo.edited)} UTC)` : arcFrontInfo.label;
     const adv = arcAdvInfo.edited ? `${arcAdvInfo.label} (edit: ${fmtDateTime(arcAdvInfo.edited)} UTC)` : arcAdvInfo.label;
-
-    const miss = (deepLatestDate && deepLatestDate !== new Date().toISOString().slice(0,10))
-      ? `<div style="margin-top:6px;color:#b26a00;"><b>⚠ Mai hiány:</b> DeepState</div>`
-      : "";
-
-    mapStamp.querySelector(".content").innerHTML =
-      `DeepState (nézett): <b>${deep}</b><br>` +
-      `DeepState (legfrissebb): <b>${deepLatest}</b><br>` +
-      `ArcGIS front: ${front}<br>` +
-      `ArcGIS advance: ${adv}` + miss;
+    mapStamp.innerHTML = `<b>Adat dátuma</b><br>DeepState: ${deep}<br>ArcGIS front: ${front}<br>ArcGIS advance: ${adv}`;
   }
 
   async function loadArcMeta(){
@@ -904,77 +829,82 @@
   selDays.addEventListener("change", fetchFirms);
   selMaxPts.addEventListener("change", () => { if(currentDate) renderFirmsForDate(currentDate); });
 
-  // ---------- Drones (ÚJ: idősáv + több fájlnév fallback) ----------
-  function droneCandidates(windowKey){
-    // rugalmas: ha csak egyet generáltok a workflow-ban, akkor is találjon
-    if(windowKey === "7d") return [
-      "./data/drones_7d.geojson",
-      "./data/drones_last7d.geojson",
-      "./data/drones_recent.geojson",
-      "./data/drones_latest.geojson"
-    ];
-    if(windowKey === "30d") return [
-      "./data/drones_30d.geojson",
-      "./data/drones_last30d.geojson",
-      "./data/drones_recent.geojson",
-      "./data/drones_latest.geojson"
-    ];
-    return [
-      "./data/drones_latest.geojson",
-      "./data/drones_recent.geojson",
-      "./data/drones_7d.geojson"
-    ];
+  // ---------- Drones (multi-source: GDELT + ISW) ----------
+  let lastDroneMeta = null;
+
+  function droneSourceSpec(){
+    const key = selDroneSource.value;
+    return DRONE_SOURCES[key] || DRONE_SOURCES.gdelt_latest;
   }
 
-  async function tryLoadFirstGeoJSON(urls){
-    let lastErr = null;
-    for(const u of urls){
-      try{
-        const j = await loadJson(u);
-        return { url: u, geojson: j };
-      }catch(e){
-        lastErr = e;
-      }
-    }
-    throw lastErr || new Error("Nincs elérhető drón GeoJSON");
+  function safeStr(x, max=1200){
+    const s = (x ?? "").toString();
+    return s.length > max ? (s.slice(0, max) + "…") : s;
   }
 
   async function loadDrones(){
     dronesLayer.clearLayers();
-    const mode = selDroneWindow.value || "latest";
+    const spec = droneSourceSpec();
+    lastDroneMeta = null;
+
     try{
-      const { url, geojson: gj } = await tryLoadFirstGeoJSON(droneCandidates(mode));
+      const gj = await loadJson(spec.url);
       const feats = gj.features || [];
-      let drawn = 0;
+
+      // try optional meta file (ISW pipeline writes isw_uav_index.json)
+      if(spec.url.includes("isw_uav_")){
+        try{
+          lastDroneMeta = await loadJson("./data/isw_uav_index.json");
+        } catch(e){ /* ignore */ }
+      }
+
+      let shown = 0;
 
       for(const f of feats){
         if(!f.geometry || f.geometry.type !== "Point") continue;
         const [lon, lat] = f.geometry.coordinates || [];
         if(typeof lon !== "number" || typeof lat !== "number") continue;
         const p = f.properties || {};
-        const title = p.title || "Drone/Rocket-related (OSINT)";
-        const when = p.date || p.time || p.datetime || "";
-        const urlLink = p.url ? `<br><a href="${p.url}" target="_blank" rel="noopener">Forrás</a>` : "";
-        const whenLine = when ? `<br><span style="color:#555">Idő: ${String(when)}</span>` : "";
+
+        const src = p.source || (spec.label.includes("ISW") ? "ISW" : "OSINT");
+        const title = p.title || p.place || "Drone-related";
+        const url = p.url || p.source_url;
+        const date = p.date ? `Dátum: ${p.date}<br>` : "";
+        const place = p.place ? `Hely: <b>${p.place}</b><br>` : "";
+        const conf = p.confidence ? `Bizalom: ${p.confidence}<br>` : "";
+        const snippet = p.snippet ? `<div style="margin-top:6px; color:#555;">${safeStr(p.snippet, 600)}</div>` : "";
+
+        const link = url ? `<a href="${url}" target="_blank" rel="noopener">Forrás</a>` : "";
+        const srcLine = `Forrás: <b>${src}</b> (${spec.label})<br>`;
 
         dronesLayer.addLayer(
           L.circleMarker([lat, lon], { radius: 5, color:"#0077ff", weight:2, fillOpacity:0.55 })
-            .bindPopup(`<b>Drón / rakéta pont</b><br>${title}${whenLine}${urlLink}<br><span style="color:#555">Lat/Lon: ${lat.toFixed(5)}, ${lon.toFixed(5)}</span>`)
+            .bindPopup(
+              `<b>Drón / UAV / rakéta</b><br>` +
+              srcLine +
+              `${place}${date}${conf}` +
+              `Lat/Lon: ${lat.toFixed(5)}, ${lon.toFixed(5)}<br>` +
+              `${link}${snippet}`
+            )
         );
-        drawn++;
+        shown += 1;
       }
 
-      log(`Drón pontok: betöltve ✔ (${drawn}) [forrás: ${url.split("/").pop()}]`);
-      if(drawn === 0){
-        log("Drón pontok: a GeoJSON üres (features: 0).");
-      }
       setVisible(dronesLayer, chkDrones.checked);
+
+      let metaLine = "";
+      if(lastDroneMeta?.source_date || lastDroneMeta?.generated_utc){
+        metaLine = ` | ISW dátum: ${lastDroneMeta.source_date || "–"} | gen: ${(lastDroneMeta.generated_utc||"").slice(0,19).replace("T"," ")}`;
+      }
+      log(`Drón pontok: betöltve ✔ (${shown}) | ${spec.label}${metaLine}`);
+
     } catch(e){
-      log("Drón pontok: nincs még (vagy üres / nem elérhető) – " + String(e));
+      log(`Drón pontok: nincs még / hiba – ${spec.label} – ` + String(e));
     }
   }
 
-  selDroneWindow.addEventListener("change", loadDrones);
+  selDroneSource.addEventListener("change", () => loadDrones());
+  btnReloadDrones.addEventListener("click", loadDrones);
 
   // ---------- ArcGIS ----------
   async function loadArcGIS(){
@@ -1048,74 +978,34 @@
     loadByIndex(Number(rngDay.value), false);
   });
 
-  // ÚJ: okos Jump lista (2 év + évkezdet + utolsó 12 hónap eleje + fix)
   function fillJumpOptions(){
     selJump.innerHTML = "";
     if(!dates.length) return;
 
     const last = dates.length - 1;
+    const picks = new Map();
 
-    const addOpt = (label, idx) => {
+    picks.set("Legfrissebb", last);
+    picks.set("−7 nap", Math.max(0, last - 7));
+    picks.set("−30 nap", Math.max(0, last - 30));
+    picks.set("Első", 0);
+
+    const seenMonth = new Set();
+    for(let i=0; i<dates.length; i++){
+      const d = dates[i].date || "";
+      const ym = d.slice(0,7);
+      if(ym.length === 7 && !seenMonth.has(ym)){
+        seenMonth.add(ym);
+        picks.set(ym + " (hó eleje)", i);
+      }
+    }
+
+    for(const [label, idx] of picks.entries()){
       const opt = document.createElement("option");
       opt.value = String(idx);
       opt.textContent = label;
       selJump.appendChild(opt);
-    };
-
-    // Fix ugrások
-    addOpt("Legfrissebb", last);
-    addOpt("−7 nap", Math.max(0, last - 7));
-    addOpt("−30 nap", Math.max(0, last - 30));
-    addOpt("−90 nap", Math.max(0, last - 90));
-    addOpt("−180 nap", Math.max(0, last - 180));
-    addOpt("−365 nap", Math.max(0, last - 365));
-    addOpt("−730 nap (2 év)", Math.max(0, last - 730));
-
-    // Évkezdetek (utolsó 3 év)
-    const years = new Set();
-    for(let i=last; i>=0; i--){
-      const d = dates[i]?.date || "";
-      const y = d.slice(0,4);
-      if(y.length !== 4) continue;
-      if(!years.has(y)){
-        years.add(y);
-      }
-      if(years.size >= 3) break;
     }
-
-    for(const y of Array.from(years).sort().reverse()){
-      // első index adott évben
-      let idx = null;
-      for(let i=0;i<dates.length;i++){
-        if((dates[i]?.date||"").startsWith(y+"-")){
-          idx = i; break;
-        }
-      }
-      if(idx !== null) addOpt(`📅 ${y} eleje`, idx);
-    }
-
-    // Utolsó 12 hónap eleje (visszafelé)
-    const seenMonths = new Set();
-    let added = 0;
-    for(let i=last; i>=0; i--){
-      const d = dates[i]?.date || "";
-      const ym = d.slice(0,7);
-      if(ym.length !== 7) continue;
-      if(seenMonths.has(ym)) continue;
-      seenMonths.add(ym);
-
-      // találjuk meg a hónap első indexét
-      let idx = i;
-      while(idx > 0 && (dates[idx-1]?.date || "").startsWith(ym)) idx--;
-
-      addOpt(`🗓 ${ym} eleje`, idx);
-      added++;
-      if(added >= 12) break;
-    }
-
-    // Legalább az első nap
-    addOpt("Első", 0);
-
     selJump.value = String(last);
   }
 
@@ -1163,9 +1053,6 @@
       if(!Array.isArray(ds) || ds.length === 0) throw new Error("Üres deepstate_dates.json");
       dates = ds;
 
-      deepLatestDate = dates[dates.length - 1]?.date || null;
-      setTodayNotice();
-
       rngDay.min = "0";
       rngDay.max = String(dates.length - 1);
       rngDay.value = String(dates.length - 1);
@@ -1194,9 +1081,6 @@
     try{
       dates = await loadJson("./data/deepstate_dates.json");
       if(!Array.isArray(dates) || dates.length === 0) throw new Error("Üres deepstate_dates.json");
-
-      deepLatestDate = dates[dates.length - 1]?.date || null;
-      setTodayNotice();
 
       rngDay.min = "0";
       rngDay.max = String(dates.length - 1);
